# MyVoxelGame

./: .gitignore  CMakeLists.txt
include/: Camera.h  Chunk.h  Player.h  Shader.h  Texture.h  TextureManager.h  UIRenderer.h  World.h
src/: Chunk.cpp  Player.cpp  Shader.cpp  Texture.cpp  TextureManager.cpp  UIRenderer.cpp  World.cpp  main.cpp
